2008-11-03  Ronaldo Maia  <romaia@async.com.br>

	* kiwi/ui/comboentry.py: Keep the toggle button the same size as the
							 entry and position the popup correctly. Fixes
							 3841

2008-10-28  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/builderloader.py:
	* kiwi/ui/views.py:
	Add initial support for loading GtkBuilder files

=== 1.9.23 ===
2008-09-10 George Y. Kussumoto <george@async.com.br>

	Release 1.9.23

2008-07-14  George Y. Kussumoto  <george@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py: ColoredColumn - data_func should receive the model
							 object instead of the attribute value.

2008-07-11  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py: Enable more than one color on a ColoredColumn

2008-06-23  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Christian Reis  <kiko@async.com.br>

	* kiwi/ui/views.py:
	Allow user to specify the widget directly when attaching a slave.

2008-06-05  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py:
	Make Mr Buildbot a happy camper

2008-06-05  Johan Dahlin  <jdahlin@async.com.br>

	* glade3-plugin/kiwiwidgets.py:
	* glade3-plugin/kiwiwidgets.xml:
	* glade3-plugin/setup.py:
	Update the glade3 plugin to Juan's latest revival
	of catalog support in glade3

2008-06-05  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gazpacholoader.py:
	Remove duplicate converters

	* kiwi/datatypes.py:
	* kiwi/ui/proxy.py:
	* kiwi/ui/proxywidget.py:
	* kiwi/ui/widgets/button.py:
	* tests/test_CheckButton.py:
	* tests/test_Entry.py:
	* tests/test_Scale.py:
	* tests/test_SpinButton.py:
	* tests/test_proxy.py:
	* tests/test_utils.py:
	Change data_type property from object to string and update tests
	and callsites.

2008-06-05  Johan Dahlin  <jdahlin@async.com.br>

	reviewed by: <delete if not using a buddy>

	* debian/changelog:
	* glade3-plugin/kiwiwidgets.py:
	* glade3-plugin/kiwiwidgets.xml: